# dytr

./: MANIFEST.in  NOTICE  README.md  dytr_bert_finetune_demo.ipynb  pyproject.toml  requirements.txt  setup.py
src/dytr/: __init__.py
src/dytr/cli/: __init__.py  export.py  train.py
src/dytr/core/: __init__.py  config.py  decoder.py  encoder.py  exporter.py  layers.py  model.py
src/dytr/memory/: __init__.py  ewc.py  replay.py
src/dytr/pretrained/: __init__.py  loader.py
src/dytr/tokenization/: __init__.py  download_manager.py  simple_tokenizer.py
src/dytr/training/: __init__.py  data.py  dataset.py  trainer.py  utils.py
src/dytr/utils/: __init__.py  caching.py  logging.py
