[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dytr"
version = "0.1.0"
description = "dytr: Dynamic Transformer for Multi-Task Learning with Continual Learning Support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Akram Alsubari", email = "akram.alsubari@outlook.com"}
]
maintainers = [
    {name = "Akram Alsubari", email = "akram.alsubari87@gmail.com"}
]
keywords = [
    "transformer",
    "multi-task-learning",
    "continual-learning",
    "pytorch",
    "nlp",
    "deep-learning",
    "attention",
    "neural-networks",
    "machine-learning",
    "dytr"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent"
]

dependencies = [
    "torch>=1.10.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "tqdm>=4.62.0",
    "requests>=2.25.0"
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.0.0"
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "build>=0.7",
    "twine>=3.4",
    "isort>=5.9.0"
]
docs = ["sphinx>=4.0", "sphinx-rtd-theme>=0.5"]
all = [
    "transformers>=4.0.0",
    "pytest>=6.0",
    "sphinx>=4.0"
]

[project.urls]
"Bug Reports" = "https://github.com/AAlsubari/dytr"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["dytr*"]}}
include-package-data = true

[tool.setuptools.package-data]
dytr = [
    "py.typed",
    "**/*.json",
    "**/*.txt",
]

[tool.setuptools.dynamic]
version = {attr = "dytr.__version__"}